<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SongBird</string>

    <!--Login-->
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>

    <!--Tweet-->
    <string name="tweet_default_user_name">Name</string>
    <string name="tweet_default_user_info">Name Username · 0s</string>
    <string name="tweet_default_tweet">Text of the tweet</string>
    <string name="cd_profile_image">cd_tweet_profile_picture</string>

    <!--Compose-->
    <string name="compose_prompt">What\'s happening?</string>
    <string name="compose_tweet_button">Tweet</string>
    <string name="compose_default_counter_value">140</string>
    <string name="cd_close_dialog">Close tweet dialog</string>

    <!--Detail-->
    <plurals name="detail_retweet_plural">
        <item quantity="one">%d Retweet</item>
        <item quantity="other">%d Retweets</item>
    </plurals>
    <plurals name="detail_like_plural">
        <item quantity="one">%d Like</item>
        <item quantity="other">%d Likes</item>
    </plurals>
    <string name="detail_default_timestamp">1:30 AM 26 June 17</string>
    <string name="detail_default_retweet">50 Retweets</string>
    <string name="detail_default_likes">62 likes</string>
    <string name="detail_reply_hint">Tweet your reply</string>

    <!--Errors-->
    <string name="error_no_tweets">Unable to fetch tweets.</string>

    <!--Navigation Drawer-->
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_lists">Lists</string>
    <string name="nav_menu_moments">Moments</string>
    <string name="nav_menu_highlights">Highlights</string>
    <string name="nav_menu_settings">Settings</string>

    <!--Profile-->
    <string name="profile_default_bio">Default Bio</string>
    <string name="profile_default_website">heep://website.com</string>
    <string name="profile_default_location">San Francisco</string>
    <string name="profile_default_birthday">April 17th</string>
    <string name="profile_followers_count">Following 0</string>
</resources>