<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_stroke"
        android:title="@string/nav_menu_profile"/>
    <item
        android:id="@+id/nav_lists"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_menu_lists"/>
    <item
        android:id="@+id/nav_moments"
        android:icon="@drawable/ic_lightning"
        android:title="@string/nav_menu_moments"/>
    <item
        android:id="@+id/nav_highlights"
        android:icon="@drawable/ic_highlights"
        android:title="@string/nav_menu_highlights"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_menu_settings"/>
</menu>
