<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etEnterTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/compose_prompt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEnterTweet"
        android:gravity="end">

        <TextView
            android:id="@+id/tvCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/compose_default_counter_value"/>

        <Button
            android:id="@+id/btnTweet"
            android:layout_width="@dimen/compose_tweet_button_width"
            android:layout_height="@dimen/compose_tweet_button_height"
            android:text="@string/compose_tweet_button"/>
    </LinearLayout>
</RelativeLayout>