<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivHeaderImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_header_image_height"
        app:layout_constraintBottom_toTopOf="@+id/bEditProfile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nav_bar_gradient"/>

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="@dimen/tweet_profile_image_size"
        android:layout_height="@dimen/tweet_profile_image_size"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="81dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvBio"
        app:layout_constraintTop_toTopOf="@+id/ivHeaderImage"
        app:srcCompat="@drawable/ic_lightning"/>

    <Button
        android:id="@+id/bEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginTop="102dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Edit Profile"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/ivHeaderImage"
        android:text="@string/tweet_default_user_name"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/tweet_small_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        android:text="@string/tweet_default_user_name"/>

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/tweet_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        android:text="@string/profile_default_bio"/>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/tweet_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBio"
        android:text="@string/profile_default_location"/>

    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/tweet_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation"
        android:text="@string/profile_default_website"/>

    <TextView
        android:id="@+id/tvFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/tweet_padding"
        app:layout_constraintTop_toBottomOf="@+id/tvWebsite"
        android:text="@string/profile_followers_count"/>
</android.support.constraint.ConstraintLayout>
